--- a/app/src/main/res/layout/activity_earn_first_money_details.xml
+++ b/app/src/main/res/layout/activity_earn_first_money_details.xml
@@ -48,10 +48,11 @@
                 android:layout_height="40dp">
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="易赚的每位玩家的必经之任务，轻松拿钱到账！"
+                    android:text="易钻每位玩家的必经任务！"
                     android:layout_marginRight="15dp"
                     android:textSize="16sp"
                     android:layout_centerVertical="true"
+                    android:textColor="@color/black"
                     android:layout_marginLeft="15dp"
                     android:layout_height="wrap_content" />
             </RelativeLayout>
@@ -69,13 +70,14 @@
                     android:textColor="@color/black"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="15dp"
-                    android:text="1.新手任务之了解平台？"
+                    android:text="1.新手任务之了解平台！"
                     android:layout_height="wrap_content" />
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="认真看完平台介绍，了解平台是大家首先的赚钱平台，即可获得0.3元奖励，立马入账；"
+                    android:text="认真看完平台介绍，了解平台即可获得0.3元奖励。"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
+                    android:textColor="@color/light_black"
                     android:layout_marginTop="5dp"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -89,12 +91,13 @@
                     android:textColor="@color/black"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="15dp"
-                    android:text="2.新手任务之绑定微信？"
+                    android:text="2.新手任务之绑定微信！"
                     android:layout_height="wrap_content" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:text="进入新手任务界面点击绑定微信，授权成功，即可获得0.5元奖励，立马入账(绑定微信可方便一键提现功能)。"
                     android:layout_marginLeft="20dp"
+                    android:textColor="@color/light_black"
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="5dp"
                     android:layout_height="wrap_content" />
@@ -109,13 +112,14 @@
                     android:textColor="@color/black"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="15dp"
-                    android:text="3.新手任务之绑定支付宝？"
+                    android:text="3.新手任务之绑定支付宝！"
                     android:layout_height="wrap_content" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:text="进入新手任务界面点击绑定支付宝，信息提交成功，即可获得0.5元奖励，立马入账(绑定支付宝方便提现功能)。"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
+                    android:textColor="@color/light_black"
                     android:layout_marginTop="5dp"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -129,12 +133,34 @@
                     android:textColor="@color/black"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="15dp"
-                    android:text="4.新手任务之绑定手机？"
+                    android:text="4.新手任务之绑定手机！"
                     android:layout_height="wrap_content" />
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="进入新手任务界面点击绑定手机，绑定成功，即可获得0.5元奖励，立马入账(绑定手机可方便做其他任务)。"
+                    android:text="进入新手任务界面点击绑定手机，绑定成功，即可获得0.5元奖励，立马入账(绑定手机可方做其他任务)。"
                     android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:textColor="@color/light_black"
+                    android:layout_marginTop="5dp"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:textSize="17sp"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="15dp"
+                    android:text="5.新手任务之分享平台！"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:text="每天分享一次任务即可获得0.3元奖励。"
+                    android:layout_marginLeft="20dp"
+                    android:textColor="@color/light_black"
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="5dp"
                     android:layout_height="wrap_content" />
@@ -149,13 +175,14 @@
                     android:textColor="@color/black"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="15dp"
-                    android:text="5.新手任务之分享平台？"
+                    android:text="6.快速任务！"
                     android:layout_height="wrap_content" />
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="每天分享一次任务即可获得一元奖励"
+                    android:text="领取任务做完可得到相应的任务奖励。"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
+                    android:textColor="@color/light_black"
                     android:layout_marginTop="5dp"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -169,33 +196,14 @@
                     android:textColor="@color/black"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="15dp"
-                    android:text="6.快速任务？"
+                    android:text="7.联盟任务！"
                     android:layout_height="wrap_content" />
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="领取任务做完可得到相应的任务奖励"
+                    android:text="领取任务做完可得到相应的任务奖励。"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:textSize="17sp"
-                    android:textColor="@color/black"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="15dp"
-                    android:text="7.联盟任务？"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:text="领取任务做完可得到相应的任务奖励"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
+                    android:textColor="@color/light_black"
                     android:layout_marginTop="5dp"
                     android:layout_height="wrap_content" />
             </LinearLayout>
