--- a/app/src/main/res/layout/activity_red_details.xml
+++ b/app/src/main/res/layout/activity_red_details.xml
@@ -48,7 +48,8 @@
                 android:layout_height="40dp">
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="易赚抢红包能赚钱，挖宝箱能挖到什么呢？"
+                    android:text="易钻抢红包能赚钱，挖宝箱能挖到什么呢？"
+                    android:textColor="@color/black"
                     android:layout_marginRight="15dp"
                     android:textSize="16sp"
                     android:layout_centerVertical="true"
@@ -73,7 +74,7 @@
                     android:layout_height="wrap_content" />
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="1.红包分别于9点，12点，15点，18点，21点发放领取"
+                    android:text="1.红包分别于9点，12点，15点，18点，21点发放领取。"
                     android:textSize="13sp"
                     android:textColor="@color/red"
                     android:layout_marginLeft="20dp"
@@ -100,7 +101,7 @@
                     android:layout_height="wrap_content" />
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="4.要领取红包需要绑定手机"
+                    android:text="4.要领取红包需要绑定手机。"
                     android:textSize="13sp"
                     android:textColor="@color/red"
                     android:layout_marginLeft="20dp"
@@ -109,7 +110,7 @@
                     android:layout_height="wrap_content" />
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="5.红包现金会发至手机号对应的账户余额中"
+                    android:text="5.红包现金会发至手机号对应的账户余额中。"
                     android:textSize="13sp"
                     android:textColor="@color/red"
                     android:layout_marginLeft="20dp"
@@ -127,7 +128,7 @@
                     android:layout_height="wrap_content" />
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="7.每一包的金额不等，全看个人运气，最高可得10元"
+                    android:text="7.每一包的金额不等，全看个人运气，最高可得10元。"
                     android:textSize="13sp"
                     android:textColor="@color/red"
                     android:layout_marginLeft="20dp"
@@ -167,7 +168,7 @@
                     android:layout_height="wrap_content" />
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="3.完成10次任务，挖宝藏+1"
+                    android:text="3.完成10次任务，挖宝藏+1。"
                     android:textSize="13sp"
                     android:textColor="@color/red"
                     android:layout_marginLeft="20dp"
@@ -176,7 +177,7 @@
                     android:layout_height="wrap_content" />
                 <TextView
                     android:layout_width="wrap_content"
-                    android:text="4.成功收5名徒弟并注册成功，挖宝藏+1"
+                    android:text="4.成功收5名徒弟并注册成功，挖宝藏+1。"
                     android:textSize="13sp"
                     android:textColor="@color/red"
                     android:layout_marginLeft="20dp"
@@ -299,7 +300,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:layout_marginLeft="15dp"
-                    android:text="红包元0.01-10元"
+                    android:text="红包0.01-10元"
                     android:layout_height="wrap_content" />
             </LinearLayout>
         </LinearLayout>
