--- a/app/src/main/res/layout/activity_kown_platform.xml
+++ b/app/src/main/res/layout/activity_kown_platform.xml
@@ -45,7 +45,7 @@
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:textColor="@color/black"
-               android:text="易赚ATM是传祺网络科技有限公司首发APP，是一款轻松赚外快，快速攒人脉的APP。"
+               android:text="易钻ATM是传祺网络科技有限公司首款APP，是一款轻松赚外快，快速攒人脉的APP。"
                android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="wrap_content"
@@ -65,7 +65,7 @@
                 android:textSize="17sp"
                 android:textColor="@color/black"
                 android:layout_marginTop="10dp"
-                android:text="2．完成任务挖宝箱，获取免费赚取苹果6PLUS的抽取机会。"
+                android:text="2．完成任务挖宝箱，获取免费赚取苹果6Plus的抽取机会。"
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="wrap_content"
