--- a/app/src/main/res/layout/activity_red_detail.xml
+++ b/app/src/main/res/layout/activity_red_detail.xml
@@ -50,7 +50,7 @@
             android:textSize="17sp"
             android:layout_marginLeft="10dp"
             android:textColor="@color/black"
-            android:text="您当前的可用余额:"
+            android:text="您当前的可用红包余额:"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/tv_price"
@@ -60,7 +60,6 @@
             android:textColor="@color/red"
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
-            android:text="100.00"
             android:layout_height="wrap_content" />
         <TextView
             android:layout_toRightOf="@+id/tv_price"
@@ -93,6 +92,7 @@
             android:textSize="17sp"
             android:layout_height="wrap_content" />
         <EditText
+            android:id="@+id/et_price"
             android:layout_width="wrap_content"
             android:layout_toRightOf="@+id/tv_tx"
             android:hint="输入金额"
@@ -110,7 +110,7 @@
         <TextView
             android:id="@+id/tv_select"
             android:layout_width="wrap_content"
-            android:text="注意:提现金额必须是10的倍数"
+            android:text="注意:提现金额必须是100的倍数"
             android:textColor="@color/red"
             android:textSize="15sp"
             android:layout_centerVertical="true"
@@ -156,6 +156,7 @@
         android:layout_height="0.2dp"></View>
     <RelativeLayout
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="45dp">
         <RadioButton
             android:id="@+id/rb_alipay"
@@ -193,6 +194,7 @@
         android:layout_height="0.2dp"></View>
     <RelativeLayout
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="45dp">
         <RadioButton
             android:id="@+id/rb_into_jqz"
