--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -14,7 +14,7 @@
       android:layout_height="50dp">
       <TextView
           android:layout_width="wrap_content"
-          android:text="签到赚积分"
+          android:text="签到赚钱"
           android:textColor="@color/white"
           android:textSize="18sp"
           android:layout_centerInParent="true"
