--- a/app/src/main/res/layout/activity_withdraw.xml
+++ b/app/src/main/res/layout/activity_withdraw.xml
@@ -83,13 +83,14 @@
             android:textSize="17sp"
             android:layout_height="wrap_content" />
         <EditText
+            android:id="@+id/et_price"
             android:layout_width="wrap_content"
             android:layout_toRightOf="@+id/tv_tx"
-            android:hint="输入金额"
+            android:hint="输入金额(大于1元)"
             android:layout_marginBottom="10dp"
+            android:numeric="decimal"
             android:layout_marginTop="10dp"
             android:gravity="center"
-            android:inputType="number"
             android:textSize="17sp"
             android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
@@ -160,6 +161,7 @@
         android:layout_height="0.2dp"></View>
     <RelativeLayout
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="45dp">
         <RadioButton
             android:id="@+id/rb_alipay"
@@ -193,6 +195,7 @@
         android:layout_height="0.2dp"></View>
     <RelativeLayout
     android:layout_width="match_parent"
+        android:visibility="gone"
     android:layout_height="45dp">
     <RadioButton
         android:id="@+id/rb_phone"
@@ -226,6 +229,7 @@
         android:layout_height="0.2dp"></View>
     <RelativeLayout
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="45dp">
         <RadioButton
             android:id="@+id/rb_into_jqz"
