--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="易钻"
+            android:text="易钻ATM"
             android:textSize="20sp"
             android:paddingTop="20dp"
             android:textColor="@color/white"
@@ -302,11 +302,11 @@
                         android:layout_height="wrap_content">
                         >
                         <TextView
-                            android:id="@+id/tv_day_shop"
+                            android:id="@+id/tv_yq"
                             android:layout_width="wrap_content"
                             android:textColor="@drawable/textcolor_seleclor"
                             android:textSize="12sp"
-                            android:text="每日夺宝"
+                            android:text="邀   请"
                             android:layout_weight="1"
                             android:gravity="center"
                             android:drawableTop="@mipmap/s_duobao"
