--- a/app/src/main/res/layout/item_img_select_pop.xml
+++ b/app/src/main/res/layout/item_img_select_pop.xml
@@ -3,37 +3,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_gravity="center"
+        android:layout_gravity="bottom"
         android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:background="@mipmap/s_qianghongbaokuang"
-            android:layout_height="wrap_content">
-        </LinearLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:text="您获得了100元"
-            android:textColor="@color/red"
-            android:textSize="18sp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="65dp"
-            android:layout_height="wrap_content" />
-
-        <ImageView
-            android:id="@+id/img_comfirm"
-            android:layout_width="wrap_content"
-            android:background="@mipmap/s_hongbaoqueding"
-            android:layout_gravity="bottom|center"
-            android:layout_marginBottom="20dp"
-            android:layout_height="wrap_content">
-        </ImageView>
-    </FrameLayout>
-
-
-
-
+        <Button
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#dddddd"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:textSize="16sp"
+            android:textColor="#545646"
+            android:text="拍照"
+            android:id="@+id/btn_take" />
+        <View
+            android:layout_width="match_parent"
+            android:background="#FFFFFF"
+            android:layout_height="0.2dp"></View>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:textSize="16sp"
+            android:background="#dddddd"
+            android:textColor="#000000"
+            android:text="保存图片"
+            android:id="@+id/btn_save" />
+        <View
+            android:layout_width="match_parent"
+            android:background="#FFFFFF"
+            android:layout_height="0.2dp"></View>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:textSize="16sp"
+            android:background="#dddddd"
+            android:textColor="#000000"
+            android:text="取消"
+            android:id="@+id/btn_cancle" />
+    </LinearLayout>
 </LinearLayout>
