--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="dark_red">#f7000c</color>
     <color name="light_red">#ffb5b5</color>
     <color name="black">#000000</color>
+    <color name="light_black">#444555</color>
     <color name="white">#FFFFFF</color>
     <color name="dark_gray">#cccccc</color>
     <color name="darks_gray">#aaaaaa</color>
@@ -18,4 +19,5 @@
     <color name="yellow_light_dard">#fff437</color>
     <color name="yellow_dark">#f3d71d</color>
     <color name="red_back">#ca1946</color>
+    <color name="yq_bg">#fbebb5</color>
 </resources>
